@@ -1,5 +1,6 @@
 0.06
  - Rewrite from List::MoreUtils to List::Util.
+ - Update Module::Install to 1.21 version.
 
 0.05 2022-09-10T12:28:17+02:00
  - Add angle2zodiac to SEE ALSO section in doc.
